--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         <!-- JavaScript will dynamically add star elements here -->
     </div>
     <div class="inpendence_day_greeting"> <img src="Smallbg_independence_msg.png" class="greeting" /><img src="Largebg_Independence_msg.png" class="greet"></div>
+    <div class="card-container">
+        <div class="unity_in_diversity">
+            <img src="Heritage India.png" class="indian_heritage" />
+        </div>
+        <div class="description">
+            <p class="summary">"Unity in Diversity" epitomizes India's harmonious coexistence of diverse cultural, religious, linguistic, and ethnic backgrounds within its national fabric. This concept highlights the nation's ability to maintain a shared identity while
+                embracing various traditions.
+                <span class="wh">India's rich cultural mosaic showcases festivals, art forms, and languages that reflect its diverse heritage.The nation's historical legacy, including the birthplace of multiple religions, emphasizes religious tolerance and pluralism. </span>                <span class="blue">             With over 1,600 languages spoken, linguistic diversity is a hallmark.India boasts a rich tapestry of cultures, each with its own </span> <span class="wh"> distinct traditions, festivals, and art forms. From the colorful festivals of Diwali, Eid, and Christmas to the classical dance forms like Bharatanatyam
+                and Kathak, the cultural diversity is evident. The constitutional framework guarantees individual rights to practice religion.</span> <span class="gr">Despite challenges, India's political integration, historical interactions, and acceptance of differences underpin its unity. This philosophy not only encourages peaceful cohabitation but also shapes the evolving social fabric of the country. India's unity in diversity serves as an inspiring model of how different communities can thrive together.
+    
+
+
+
+                </span></p>
+        </div>
+    </div>
+
     <script src="script.js "></script>
 </body>
 
