--- a/index.html
+++ b/index.html
@@ -38,12 +38,32 @@
                 embracing various traditions.
                 <span class="wh">India's rich cultural mosaic showcases festivals, art forms, and languages that reflect its diverse heritage.The nation's historical legacy, including the birthplace of multiple religions, emphasizes religious tolerance and pluralism. </span>                <span class="blue">             With over 1,600 languages spoken, linguistic diversity is a hallmark.India boasts a rich tapestry of cultures, each with its own </span> <span class="wh"> distinct traditions, festivals, and art forms. From the colorful festivals of Diwali, Eid, and Christmas to the classical dance forms like Bharatanatyam
                 and Kathak, the cultural diversity is evident. The constitutional framework guarantees individual rights to practice religion.</span> <span class="gr">Despite challenges, India's political integration, historical interactions, and acceptance of differences underpin its unity. This philosophy not only encourages peaceful cohabitation but also shapes the evolving social fabric of the country. India's unity in diversity serves as an inspiring model of how different communities can thrive together.
+    
+
+
 
                 </span></p>
         </div>
     </div>
+    <h1 class="Heritage">Videos Representing <span class="or">Unity</span> <span class="wh">In</span> <span class="gr">Diversity</span></h1>
+    <div class="vid">
+        <div class="video-container">
+            <video src="Cultural Tourism(720P_HD).mp4" controls></video>
+            <video src="This is India in 4K _ Incredible India _ Soul and Fuel _(720P_HD).mp4" controls></video>
+            <video src="Indian_Pooja.mp4" controls></video>
+            <video src="India_Places.mp4" controls></video>
+            <video src="Welcome to India _ [CINEMATIC TRAVEL FILM](720P_HD).mp4" controls></video>
+            <video src="INDIA - UNITY IN DIVERSITY _ Cinematic Travel Video(720P_60FPS).mp4" controls></video>
 
-    <script src="script.js "></script>
+        </div>
+    </div>
+    <div class="conclusion">
+        <img src="proud_indian_lg.png" class="con" /> </div>
+    <div class="footer">
+        <h1 class="footer_name">Made with <span class="heart-beat"> ❤️</span> by Chowdam Jaganath</h1>
+    </div>
+    <script src="script.js ">
+    </script>
 </body>
 
 </html>
