--- a/index.html
+++ b/index.html
@@ -31,23 +31,32 @@
     <div class="inpendence_day_greeting"> <img src="Smallbg_independence_msg.png" class="greeting" /><img src="Largebg_Independence_msg.png" class="greet"></div>
     <div class="card-container">
         <div class="unity_in_diversity">
-            <img src="Heritage India.png" class="indian_heritage" />
+            <img src="Heritage.png" class="indian_heritage" />
         </div>
         <div class="description">
             <p class="summary">"Unity in Diversity" epitomizes India's harmonious coexistence of diverse cultural, religious, linguistic, and ethnic backgrounds within its national fabric. This concept highlights the nation's ability to maintain a shared identity while
                 embracing various traditions.
                 <span class="wh">India's rich cultural mosaic showcases festivals, art forms, and languages that reflect its diverse heritage.The nation's historical legacy, including the birthplace of multiple religions, emphasizes religious tolerance and pluralism. </span>                <span class="blue">             With over 1,600 languages spoken, linguistic diversity is a hallmark.India boasts a rich tapestry of cultures, each with its own </span> <span class="wh"> distinct traditions, festivals, and art forms. From the colorful festivals of Diwali, Eid, and Christmas to the classical dance forms like Bharatanatyam
-                and Kathak, the cultural diversity is evident. The constitutional framework guarantees individual rights to practice religion.</span> <span class="gr">Despite challenges, India's political integration, historical interactions, and acceptance of differences underpin its unity. This philosophy not only encourages peaceful cohabitation but also shapes the evolving social fabric of the country. India's unity in diversity serves as an inspiring model of how different communities can thrive together.
-    
+                and Kathak, the cultural diversity is evident. The constitutional framework guarantees individual rights to practice religion.</span> <span class="gr">Despite challenges, India's political integration, historical interactions, and acceptance of differences underpin its unity. This philosophy not only encourages peaceful cohabitation but also shapes the evolving social fabric of the country. India's unity in diversity serves as an inspiring model of how different communities can thrive together.</span></p>
+        </div>
+    </div>
+    <h1 class="Heritage">Images Representing <span class="or">Unity</span> <span class="wh">In</span> <span class="gr">Diversity</span></h1>
+    <div class="image-container-wrapper">
+        <div class="image-container">
+            <img src="unity_img2.png" />
 
+        </div>
+        <div class="image-container">
+            <img src="unity_img1.png" />
 
-
-                </span></p>
         </div>
     </div>
     <h1 class="Heritage">Videos Representing <span class="or">Unity</span> <span class="wh">In</span> <span class="gr">Diversity</span></h1>
+
     <div class="vid">
+
         <div class="video-container">
+
             <video src="Cultural Tourism(720P_HD).mp4" controls></video>
             <video src="This is India in 4K _ Incredible India _ Soul and Fuel _(720P_HD).mp4" controls></video>
             <video src="Indian_Pooja.mp4" controls></video>
@@ -56,6 +65,7 @@
             <video src="INDIA - UNITY IN DIVERSITY _ Cinematic Travel Video(720P_60FPS).mp4" controls></video>
 
         </div>
+
     </div>
     <div class="conclusion">
         <img src="proud_indian_lg.png" class="con" /> </div>
