--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="styles.css">
     <title>Star Animation</title>
 </head>
@@ -30,8 +31,9 @@
     </div>
     <div class="inpendence_day_greeting"> <img src="Smallbg_independence_msg.png" class="greeting" /><img src="Largebg_Independence_msg.png" class="greet"></div>
     <div class="card-container">
-        <div class="unity_in_diversity">
-            <img src="Heritage.png" class="indian_heritage" />
+        <div class="image-container">
+            <img src="Heritage.png" />
+
         </div>
         <div class="description">
             <p class="summary">"Unity in Diversity" epitomizes India's harmonious coexistence of diverse cultural, religious, linguistic, and ethnic backgrounds within its national fabric. This concept highlights the nation's ability to maintain a shared identity while
@@ -48,7 +50,6 @@
         </div>
         <div class="image-container">
             <img src="unity_img1.png" />
-
         </div>
     </div>
     <h1 class="Heritage">Videos Representing <span class="or">Unity</span> <span class="wh">In</span> <span class="gr">Diversity</span></h1>
@@ -67,11 +68,15 @@
         </div>
 
     </div>
-    <div class="conclusion">
-        <img src="proud_indian_lg.png" class="con" /> </div>
+    <div class="conclus">
+        <div class="image-container1">
+            <img src="proud_indian_lg.png" class="conc" />
+        </div>
+    </div>
     <div class="footer">
         <h1 class="footer_name">Made with <span class="heart-beat"> ❤️</span> by Chowdam Jaganath</h1>
     </div>
+
     <script src="script.js ">
     </script>
 </body>
